# api/src/opentrons/server/openapi.json
@@ -1293,14 +1293,14 @@
                       "items": {
                         "description": "An object identifying a module",
                         "type": "object",
-                        "required": ["name", "displayName", "port", "serial", "model", "fwVersion", "status", "data"],
+                        "required": ["model", "name", "port", "serial", "revision", "fwVersion", "status", "data"],
                         "properties": {
                           "name": {
-                            "description": "A machine readable identifying name for a module",
+                            "description": "A machine readable identifying name for a module. Provided for backup compatibility. Prefer use of model",
                             "type": "string"
                           },
-                          "displayName": {
-                            "description": "A human-presentable name of the module",
+                          "model": {
+                            "description": "The name of the module model (e.g. magneticModuleV1) suitable for looking up the module definition",
                             "type": "string"
                           },
                           "port": {
@@ -1311,8 +1311,8 @@
                             "description": "The unique serial number of the module",
                             "type": "string"
                           },
-                          "model": {
-                            "description": "The model identifier (i.e. the part number)",
+                          "revision": {
+                            "description": "The hardware revision identifier (i.e. the part number)",
                             "type": "string"
                           },
                           "fwVersion": {
@@ -1341,11 +1341,11 @@
                     "value": {
                       "modules": [
                         {
+                          "model": "magneticModuleV1",
                           "name": "magdeck",
-                          "displayName": "Magnetic Module",
                           "port": "tty01_magdeck",
                           "serial": "MDV2313121",
-                          "model": "V23",
+                          "revision": "V23",
                           "fwVersion": "2.1.3",
                           "status": "engaged",
                           "data": {
@@ -1357,15 +1357,15 @@
                     }
                   },
                   "tempDeckAttached": {
-                    "description": "With a Temperature Module attached",
+                    "description": "With a Temperature Module GEN2 attached",
                     "value": {
                       "modules": [
                         {
+                          "model": "temperatureModuleV2",
                           "name": "tempdeck",
-                          "displayName": "Temperature Module",
                           "port": "tty2_tempdeck",
-                          "serial": "TDV10231231",
-                          "model": "V10",
+                          "serial": "TDV20231231",
+                          "revision": "V20",
                           "fwVersion": "1.2.0",
                           "status": "cooling",
                           "data": {
@@ -1381,8 +1381,8 @@
                     "value": {
                       "modules": [
                         {
+                          "model": "thermocyclerModuleV1",
                           "name": "thermocycler",
-                          "displayName": "Thermocycler",
                           "port": "tty3_thermocycler",
                           "serial": "TCV1006052018",
                           "model": "V10",
@@ -1448,12 +1448,6 @@
                   "magneticModule": {
                     "description": "Specifying a Magnetic Module",
                     "value": {
-                      "name": "magdeck",
-                      "displayName": "Magnetic Module",
-                      "port": "tty01_magdeck",
-                      "serial": "MDV2313121",
-                      "model": "V23",
-                      "fwVersion": "2.1.3",
                       "status": "engaged",
                       "data": {
                         "engaged": true,
@@ -1464,12 +1458,6 @@
                   "tempDeck": {
                     "description": "Specifying a Temperature Module",
                     "value": {
-                      "name": "tempdeck",
-                      "displayName": "Temperature Module",
-                      "port": "tty2_tempdeck",
-                      "serial": "TDV10231231",
-                      "model": "V10",
-                      "fwVersion": "1.2.0",
                       "status": "cooling",
                       "data": {
                         "currentTemp": 25,
@@ -1480,12 +1468,6 @@
                   "thermocycler": {
                     "description": "Specifying a Thermocycler",
                     "value": {
-                      "name": "thermocycler",
-                      "displayName": "Thermocycler",
-                      "port": "tty3_thermocycler",
-                      "serial": "TCV1006052018",
-                      "model": "V10",
-                      "fwVersion": "1.0.0",
                       "status": "cooling",
                       "data": {
                         "lid": "closed",
